#19 - Adding PDF route for stop
