# routes/stops.js
@@ -41,6 +41,16 @@ router.get('/:id', function (req, res, next) {
 });
 
 //
+router.get('/:id/pdf', function (req, res, next) {
+	stopModel.getStopPdfById(req.params.id)
+		.then(stream => {
+			res.setHeader('Content-type', 'application/pdf');
+			res.setHeader('Content-Disposition', 'attachment; filename=' + req.params.id + '.pdf');
+			stream.pipe(res)
+		});
+});
+
+//
 router.get('/:z/:x/:y.mvt', async (req, res) => {
 	const { z, x, y } = req.params;
 	stopModel.getTileData(x, y, z).then(tile => {
